# lziff

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/scripts/: publish-crate.sh  wait-for-crate.sh
.github/workflows/: publish-crates.yml  release.yml
crates/lziff/: Cargo.toml
crates/lziff-github/: Cargo.toml
crates/lziff-github/src/: lib.rs
crates/lziff/sample/: b.txt
crates/lziff/src/: app.rs  config.rs  diff.rs  i18n.rs  keys.rs  main.rs  picker.rs  review.rs  review_session.rs  source.rs  ui.rs
crates/review-protocol/: Cargo.toml
crates/review-protocol/src/: lib.rs
sample/: a.txt
src/: app.rs  config.rs  diff.rs  i18n.rs  keys.rs  main.rs  source.rs  ui.rs
