[package]
name = "lziff"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A cross-platform TUI diff & review tool with JetBrains-style snap-aligned side-by-side diffs"
repository = "https://github.com/KikuchiTomo/lziff"

[[bin]]
name = "lziff"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
similar = "2.6"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.2"
unicode-segmentation = "1.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
