[workspace]
resolver = "2"
members = [
    "crates/lziff",
    "crates/review-protocol",
    "crates/lziff-github",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/KikuchiTomo/lziff"
homepage = "https://github.com/KikuchiTomo/lziff"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
review-protocol = { path = "crates/review-protocol", version = "0.1.2" }
lziff-github = { path = "crates/lziff-github", version = "0.1.2" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
