[package]
name = "lziff-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GitHub backend for lziff. Future plugin candidate; stays compile-time isolated from the lziff body."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
review-protocol = { workspace = true }
